add <Row/> Component

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,32 +1,48 @@
 h1,h2,p {
 	margin: 0;
 }
+/* Table */
 .table {
 	table-layout: fixed;
 }
-.th1 {
-	width:17%;
+.table .btn-delete {
+	display:block;
+	width:100%;
 }
-.th2, .th3, .th4 {
-	width:27.66667%;
+.table .center-text {
+	text-align: center;
 }
-.cell-content {
+.table .th1 {
+	width:5%;
+}
+.table .th2 {
+	width:8%;
+}
+.table .th3, .table .th4, .table .th5 {
+	width:29%;
+}
+.table .cell-content {
 	position: relative;
 }
-.cell-label {
+.table .cell-label {
 	display: block;
 	overflow: hidden;
 	margin:0;
+	padding:0 5px;
 	white-space: nowrap;
 	text-overflow:ellipsis;
 	line-height: 34px;
 	cursor: pointer;
 	font-weight: normal;
 }
-.cell-input {
+.table .cell-input {
 	position: absolute;
 	top:0;
 	left:0;
+	padding:6px;
+}
+.table .center-text .cell-input {
+	text-align: center;
 }
 /* Thanks bootstrap */
 .table-striped>tbody>tr:nth-child(even)>td:hover,
